--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,7 +128,8 @@ em, i {
   font-style: italic; }
 
 p {
-  margin: 0 0 2em 0; }
+  margin: 0 0 2em 0;
+font-size: 20px; }
 
 h1, h2, h3, h4, h5, h6 {
   color: #3d4449;
@@ -2137,7 +2138,7 @@ button,
     flex-shrink: 0;
     display: block;
     margin: 0 0 2em 4em;
-    width: 20%; }
+    width: 50%; }
     #banner .image img {
       height: 100%;
       -moz-object-fit: cover;
