--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,8 @@ body {
   line-height: 1; }
 
 ol, ul {
-  list-style: none; }
+  list-style: none;
+  font-size: 1.2em; }
 
 blockquote, q {
   quotes: none; }
@@ -129,7 +130,7 @@ em, i {
 
 p {
   margin: 0 0 2em 0;
-font-size: 20px; }
+  font-size: 20px; }
 
 h1, h2, h3, h4, h5, h6 {
   color: #3d4449;
